# API-Manager-Proxy

./: .gitignore  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  UPLOAD_TO_GITHUB.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/modules/: backup.rs  browser_login.rs  browser_storage.rs  config.rs  desktop.rs  hub_service.rs  integration.rs  logger.rs  mod.rs  scheduler.rs  security_db.rs  single_instance.rs  token_stats.rs
src-tauri/src/proxy/: circuit_breaker.rs  cli_sync.rs  key_fetcher.rs  mod.rs  model_cache.rs  model_router.rs  monitor.rs  price_cache.rs  proxy_stats.rs  rate_limit.rs  server.rs  site_price_cache.rs  token_manager.rs
src-tauri/src/proxy/handlers/: anthropic.rs  common.rs  gemini.rs  mod.rs  openai.rs  protocol_convert.rs
src-tauri/src/proxy/middleware/: auth.rs  cors.rs  ip_filter.rs  logging.rs  mod.rs  monitor.rs  service_status.rs
src-tauri/src/proxy/upstream/: client.rs  mod.rs
src-tauri/tests/: proxy_anthropic_e2e.rs
src/components/: CliAppCard.tsx  CliSyncCard.tsx  ConfigEditorModal.tsx  ErrorAlert.tsx  Layout.tsx  LocaleToggle.tsx  PageSkeleton.tsx  ThemeToggle.tsx
src/hooks/: useConfig.ts  useDebounceCallback.ts  useLocale.tsx
src/locales/: en.ts  zh.ts
src/pages/: AccountsPage.tsx  Dashboard.tsx  HubPage.tsx  MonitorPage.tsx  ProxyPage.tsx  SettingsPage.tsx  TokenStatsPage.tsx
src/types/: backup.ts
src/utils/: request.ts
